Updating tutorials and added license file

--- a/docs/tutorials/Step_1-Extract_road_network.ipynb
+++ b/docs/tutorials/Step_1-Extract_road_network.ipynb
@@ -10,22 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
+    "import os, sys\n",
     "import overturemaps\n",
     "\n",
     "import geopandas as gpd\n",
     "\n",
-    "import sys\n",
-    "\n",
-    "sys.path.insert(0, r\"C:\\WBG\\Work\\Code\\GOSTnets\\src\")\n",
     "import GOSTnets as gn\n",
     "import GOSTnets.conversion_utils as cu\n",
     "\n",
+    "from GOSTnets.load_osm import OSM_to_network #Supports converting OSM data to GOSTnets network format\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -36,15 +33,6 @@
    "metadata": {},
    "source": [
     "# Step 1a: Extract Road Network from OpenStreetMap (OSM)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from GOSTnets.load_osm import OSM_to_network #Supports converting OSM data to GOSTnets network format"
    ]
   },
   {
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +749,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -790,7 +778,7 @@
     "# The overture maps transport network extraction requires a bounding box in WGS84 (EPSG:4326) format\n",
     "bbox = aoi.to_crs(epsg=4326).total_bounds.tolist()\n",
     "# Extract the transport network within the bounding box\n",
-    "transport = overturemaps.record_batch_reader(\"segment\", bbox).read_all()\n",
+    "transport = overturemaps.record_batch_reader(\"segment\", bbox, release=\"2025-12-17.0\").read_all()\n",
     "transport_df = gpd.GeoDataFrame.from_arrow(transport)\n",
     "transport_df.crs = 4326\n",
     "transport_df = transport_df.loc[:, [\"id\", \"class\", \"subtype\", \"road_surface\", \"speed_limits\", \"width_rules\", \"geometry\"]]\n",
@@ -799,129 +787,7 @@
     "transport_df = gpd.sjoin(transport_df, aoi.to_crs(4326), how=\"inner\")\n",
     "transport_df = transport_df.loc[:, orig_cols]\n",
     "# filter to accept only accepted road types\n",
-    "transport_df = transport_df['class'].isin(accepted_road_types)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>class</th>\n",
-       "      <th>subtype</th>\n",
-       "      <th>road_surface</th>\n",
-       "      <th>speed_limits</th>\n",
-       "      <th>width_rules</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1086</th>\n",
-       "      <td>b3e3a9b1-cf73-4997-be82-08bdfc0412a1</td>\n",
-       "      <td>path</td>\n",
-       "      <td>road</td>\n",
-       "      <td>[{'value': 'unpaved', 'between': None}]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (-21.79327 64.05525, -21.79335 64.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1093</th>\n",
-       "      <td>6355e7f7-9e88-4466-bc6c-51b2b09d4cae</td>\n",
-       "      <td>path</td>\n",
-       "      <td>road</td>\n",
-       "      <td>[{'value': 'dirt', 'between': None}]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (-21.82853 64.05742, -21.8284 64.05...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1096</th>\n",
-       "      <td>39e7c393-3b41-40f8-bfa1-a3115e95164b</td>\n",
-       "      <td>path</td>\n",
-       "      <td>road</td>\n",
-       "      <td>[{'value': 'unpaved', 'between': None}]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (-21.81536 64.05603, -21.81525 64.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1097</th>\n",
-       "      <td>fe5e0b63-1d4b-4324-8cba-79486ea80d5c</td>\n",
-       "      <td>track</td>\n",
-       "      <td>road</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (-21.80665 64.05458, -21.80655 64.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1098</th>\n",
-       "      <td>57c11e83-0e0b-4cfa-95e1-c89ce981f913</td>\n",
-       "      <td>track</td>\n",
-       "      <td>road</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>LINESTRING (-21.81151 64.04881, -21.81164 64.0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        id  class subtype  \\\n",
-       "1086  b3e3a9b1-cf73-4997-be82-08bdfc0412a1   path    road   \n",
-       "1093  6355e7f7-9e88-4466-bc6c-51b2b09d4cae   path    road   \n",
-       "1096  39e7c393-3b41-40f8-bfa1-a3115e95164b   path    road   \n",
-       "1097  fe5e0b63-1d4b-4324-8cba-79486ea80d5c  track    road   \n",
-       "1098  57c11e83-0e0b-4cfa-95e1-c89ce981f913  track    road   \n",
-       "\n",
-       "                                 road_surface speed_limits width_rules  \\\n",
-       "1086  [{'value': 'unpaved', 'between': None}]         None        None   \n",
-       "1093     [{'value': 'dirt', 'between': None}]         None        None   \n",
-       "1096  [{'value': 'unpaved', 'between': None}]         None        None   \n",
-       "1097                                     None         None        None   \n",
-       "1098                                     None         None        None   \n",
-       "\n",
-       "                                               geometry  \n",
-       "1086  LINESTRING (-21.79327 64.05525, -21.79335 64.0...  \n",
-       "1093  LINESTRING (-21.82853 64.05742, -21.8284 64.05...  \n",
-       "1096  LINESTRING (-21.81536 64.05603, -21.81525 64.0...  \n",
-       "1097  LINESTRING (-21.80665 64.05458, -21.80655 64.0...  \n",
-       "1098  LINESTRING (-21.81151 64.04881, -21.81164 64.0...  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transport_df.head()"
+    "transport_df = transport_df.loc[transport_df['class'].isin(accepted_road_types)]\n"
    ]
   },
   {
@@ -930,47 +796,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.int64(15074)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transport_df = transport_df['class'].isin(accepted_road_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Processing 0 of 1000\n",
-      "seconds elapsed: 0.00043845176696777344\n"
+      "seconds elapsed: 0.0006527900695800781\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<networkx.classes.multidigraph.MultiDiGraph at 0x1f2dceee3f0>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "G = cu.convert_roads_to_nx(transport_df.iloc[:1000,], unq_id='id', infra_field='class')\n",
-    "G"
+    "G = cu.convert_roads_to_nx(transport_df, unq_id='id', infra_field='class')"
    ]
   },
   {
@@ -984,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
