--- a/docs/tutorials/Step_2-Clean_Network.ipynb
+++ b/docs/tutorials/Step_2-Clean_Network.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,9 +210,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start: Wed Jan  7 09:43:54 2026\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\WBG\\Work\\Code\\GOSTnets\\src\\GOSTnets\\core.py:2147: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  juncs_gdf_unproj[\"centroid\"] = juncs_gdf_unproj.centroid\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1818\n",
+      "completed processing 3636 edges\n",
+      "1616\n",
+      "completed processing 3232 edges\n",
+      "Edge reduction: 1818 to 3232 (-77 percent)\n",
+      "\n",
+      "end: Wed Jan  7 09:43:56 2026\n",
+      "\n",
+      "--- processing complete\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"start: %s\\n\" % time.ctime())\n",
     "G_clean = gn.clean_network(\n",
@@ -227,9 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiDiGraph with 1184 nodes and 3232 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# let's print info on our clean version\n",
     "print(G_clean)"
@@ -257,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiDiGraph with 1139 nodes and 3140 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# print info about the largest sub-graph\n",
     "print(G_largest)"
@@ -299,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,9 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(list_of_subgraphs)"
    ]
